Some initial date jumping, though buggy. Variable font size, wrapping each line in a paragraph tag and loading of content at page load.

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -10,7 +10,8 @@
 
 
 body { padding-top: 70px; font-family: arial, sans-serif;}
-
+#results p { margin: 0; font-size: 75%; }
+#results p.conversation { font-size: 90%; }
 #control p { margin: 0; }
 #control { position: fixed; top: 0; left: 0; width: 100%; height: 50px; background: -moz-linear-gradient(90deg, #ccc, #eee); padding: 10px; border-bottom: 1px solid #555; }
 #search input, #datebuttons input, #info input { font-size: 110%; border: 1px solid #999; -moz-border-radius: 5px; padding: 0.1em 0.3em 0.1em 0.3em; }
